deploy: 93899503fa3db72efd6bfccb979685d76903dc60

--- a/classes/literaltypecheckvalidator.html
+++ b/classes/literaltypecheckvalidator.html
@@ -53,6 +53,9 @@
 			<a href="datetimevalidator.html" class="tsd-kind-icon">Date<wbr>Time<wbr>Validator</a>
 		</li>
 		<li class=" tsd-kind-class">
+			<a href="falsevalidator.html" class="tsd-kind-icon">False<wbr>Validator</a>
+		</li>
+		<li class=" tsd-kind-class">
 			<a href="isodatetimevalidator.html" class="tsd-kind-icon">ISODate<wbr>Time<wbr>Validator</a>
 		</li>
 		<li class="current tsd-kind-class">
@@ -137,6 +140,9 @@
 		</li>
 		<li class=" tsd-kind-function">
 			<a href="../globals.html#emptystringvalidator" class="tsd-kind-icon">empty<wbr>String<wbr>Validator</a>
+		</li>
+		<li class=" tsd-kind-function">
+			<a href="../globals.html#falsevalidator" class="tsd-kind-icon">false<wbr>Validator</a>
 		</li>
 		<li class=" tsd-kind-function">
 			<a href="../globals.html#formatvalidator" class="tsd-kind-icon">format<wbr>Validator</a>
@@ -229,7 +235,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L88">validator.ts:88</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L117">validator.ts:117</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -257,7 +263,7 @@
 				<div class="tsd-signature tsd-kind-icon">literal<wbr>Types<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">[]</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L88">validator.ts:88</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L117">validator.ts:117</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -267,7 +273,7 @@
 				<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L86">validator.ts:86</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L115">validator.ts:115</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -277,7 +283,7 @@
 				<div class="tsd-signature tsd-kind-icon">value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L87">validator.ts:87</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L116">validator.ts:116</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -295,7 +301,7 @@
 						<aside class="tsd-sources">
 							<p>Implementation of <a href="../interfaces/validator.html">Validator</a>.<a href="../interfaces/validator.html#validate">validate</a></p>
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L96">validator.ts:96</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L125">validator.ts:125</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-returns-title">Returns <a href="../globals.html#validationresult" class="tsd-signature-type">ValidationResult</a></h4>
