--- a/interfaces/validator.html
+++ b/interfaces/validator.html
@@ -53,6 +53,9 @@
 			<a href="../classes/datetimevalidator.html" class="tsd-kind-icon">Date<wbr>Time<wbr>Validator</a>
 		</li>
 		<li class=" tsd-kind-class">
+			<a href="../classes/falsevalidator.html" class="tsd-kind-icon">False<wbr>Validator</a>
+		</li>
+		<li class=" tsd-kind-class">
 			<a href="../classes/isodatetimevalidator.html" class="tsd-kind-icon">ISODate<wbr>Time<wbr>Validator</a>
 		</li>
 		<li class=" tsd-kind-class">
@@ -127,6 +130,9 @@
 			<a href="../globals.html#emptystringvalidator" class="tsd-kind-icon">empty<wbr>String<wbr>Validator</a>
 		</li>
 		<li class=" tsd-kind-function">
+			<a href="../globals.html#falsevalidator" class="tsd-kind-icon">false<wbr>Validator</a>
+		</li>
+		<li class=" tsd-kind-function">
 			<a href="../globals.html#formatvalidator" class="tsd-kind-icon">format<wbr>Validator</a>
 		</li>
 		<li class=" tsd-kind-function">
@@ -171,6 +177,7 @@
 				<li><a href="../classes/compositevalidator.html" class="tsd-signature-type">CompositeValidator</a></li>
 				<li><a href="../classes/containsvalidator.html" class="tsd-signature-type">ContainsValidator</a></li>
 				<li><a href="../classes/datetimevalidator.html" class="tsd-signature-type">DateTimeValidator</a></li>
+				<li><a href="../classes/falsevalidator.html" class="tsd-signature-type">FalseValidator</a></li>
 				<li><a href="../classes/isodatetimevalidator.html" class="tsd-signature-type">ISODateTimeValidator</a></li>
 				<li><a href="../classes/literaltypecheckvalidator.html" class="tsd-signature-type">LiteralTypeCheckValidator</a></li>
 				<li><a href="../classes/maxlengthvalidator.html" class="tsd-signature-type">MaxLengthValidator</a></li>
@@ -206,7 +213,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L16">validator.ts:16</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L16">validator.ts:16</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-returns-title">Returns <a href="../globals.html#validationresult" class="tsd-signature-type">ValidationResult</a></h4>
