--- a/classes/compositevalidator.html
+++ b/classes/compositevalidator.html
@@ -64,6 +64,9 @@
 			<a href="datetimevalidator.html" class="tsd-kind-icon">Date<wbr>Time<wbr>Validator</a>
 		</li>
 		<li class=" tsd-kind-class">
+			<a href="falsevalidator.html" class="tsd-kind-icon">False<wbr>Validator</a>
+		</li>
+		<li class=" tsd-kind-class">
 			<a href="isodatetimevalidator.html" class="tsd-kind-icon">ISODate<wbr>Time<wbr>Validator</a>
 		</li>
 		<li class=" tsd-kind-class">
@@ -131,6 +134,9 @@
 		</li>
 		<li class=" tsd-kind-function">
 			<a href="../globals.html#emptystringvalidator" class="tsd-kind-icon">empty<wbr>String<wbr>Validator</a>
+		</li>
+		<li class=" tsd-kind-function">
+			<a href="../globals.html#falsevalidator" class="tsd-kind-icon">false<wbr>Validator</a>
 		</li>
 		<li class=" tsd-kind-function">
 			<a href="../globals.html#formatvalidator" class="tsd-kind-icon">format<wbr>Validator</a>
@@ -221,7 +227,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L347">validator.ts:347</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L377">validator.ts:377</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -243,7 +249,7 @@
 				<div class="tsd-signature tsd-kind-icon">validators<span class="tsd-signature-symbol">:</span> <a href="../interfaces/validator.html" class="tsd-signature-type">Validator</a><span class="tsd-signature-symbol">[]</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L347">validator.ts:347</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L377">validator.ts:377</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -261,7 +267,7 @@
 						<aside class="tsd-sources">
 							<p>Implementation of <a href="../interfaces/validator.html">Validator</a>.<a href="../interfaces/validator.html#validate">validate</a></p>
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L353">validator.ts:353</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L383">validator.ts:383</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-returns-title">Returns <a href="../globals.html#validationresult" class="tsd-signature-type">ValidationResult</a></h4>
