--- a/classes/datetimevalidator.html
+++ b/classes/datetimevalidator.html
@@ -70,6 +70,9 @@
 			</ul>
 		</li>
 		<li class=" tsd-kind-class">
+			<a href="falsevalidator.html" class="tsd-kind-icon">False<wbr>Validator</a>
+		</li>
+		<li class=" tsd-kind-class">
 			<a href="isodatetimevalidator.html" class="tsd-kind-icon">ISODate<wbr>Time<wbr>Validator</a>
 		</li>
 		<li class=" tsd-kind-class">
@@ -137,6 +140,9 @@
 		</li>
 		<li class=" tsd-kind-function">
 			<a href="../globals.html#emptystringvalidator" class="tsd-kind-icon">empty<wbr>String<wbr>Validator</a>
+		</li>
+		<li class=" tsd-kind-function">
+			<a href="../globals.html#falsevalidator" class="tsd-kind-icon">false<wbr>Validator</a>
 		</li>
 		<li class=" tsd-kind-function">
 			<a href="../globals.html#formatvalidator" class="tsd-kind-icon">format<wbr>Validator</a>
@@ -229,7 +235,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L124">validator.ts:124</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L153">validator.ts:153</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -257,7 +263,7 @@
 				<div class="tsd-signature tsd-kind-icon">date<wbr>Format<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L124">validator.ts:124</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L153">validator.ts:153</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -267,7 +273,7 @@
 				<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L122">validator.ts:122</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L151">validator.ts:151</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -277,7 +283,7 @@
 				<div class="tsd-signature tsd-kind-icon">value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L123">validator.ts:123</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L152">validator.ts:152</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -295,7 +301,7 @@
 						<aside class="tsd-sources">
 							<p>Implementation of <a href="../interfaces/validator.html">Validator</a>.<a href="../interfaces/validator.html#validate">validate</a></p>
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L132">validator.ts:132</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L161">validator.ts:161</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-returns-title">Returns <a href="../globals.html#validationresult" class="tsd-signature-type">ValidationResult</a></h4>
