--- a/classes/minlengthvalidator.html
+++ b/classes/minlengthvalidator.html
@@ -53,6 +53,9 @@
 			<a href="datetimevalidator.html" class="tsd-kind-icon">Date<wbr>Time<wbr>Validator</a>
 		</li>
 		<li class=" tsd-kind-class">
+			<a href="falsevalidator.html" class="tsd-kind-icon">False<wbr>Validator</a>
+		</li>
+		<li class=" tsd-kind-class">
 			<a href="isodatetimevalidator.html" class="tsd-kind-icon">ISODate<wbr>Time<wbr>Validator</a>
 		</li>
 		<li class=" tsd-kind-class">
@@ -137,6 +140,9 @@
 		</li>
 		<li class=" tsd-kind-function">
 			<a href="../globals.html#emptystringvalidator" class="tsd-kind-icon">empty<wbr>String<wbr>Validator</a>
+		</li>
+		<li class=" tsd-kind-function">
+			<a href="../globals.html#falsevalidator" class="tsd-kind-icon">false<wbr>Validator</a>
 		</li>
 		<li class=" tsd-kind-function">
 			<a href="../globals.html#formatvalidator" class="tsd-kind-icon">format<wbr>Validator</a>
@@ -229,7 +235,7 @@
 					<li class="tsd-description">
 						<aside class="tsd-sources">
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L202">validator.ts:202</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L232">validator.ts:232</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-parameters-title">Parameters</h4>
@@ -257,7 +263,7 @@
 				<div class="tsd-signature tsd-kind-icon">min<wbr>Length<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">number</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L202">validator.ts:202</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L232">validator.ts:232</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -267,7 +273,7 @@
 				<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L200">validator.ts:200</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L230">validator.ts:230</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -277,7 +283,7 @@
 				<div class="tsd-signature tsd-kind-icon">value<span class="tsd-signature-symbol">:</span> <span class="tsd-signature-type">string</span></div>
 				<aside class="tsd-sources">
 					<ul>
-						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L201">validator.ts:201</a></li>
+						<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L231">validator.ts:231</a></li>
 					</ul>
 				</aside>
 			</section>
@@ -295,7 +301,7 @@
 						<aside class="tsd-sources">
 							<p>Implementation of <a href="../interfaces/validator.html">Validator</a>.<a href="../interfaces/validator.html#validate">validate</a></p>
 							<ul>
-								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/ade0484/src/validator.ts#L210">validator.ts:210</a></li>
+								<li>Defined in <a href="https://github.com/cm-madlabs/ts-validator/blob/9389950/src/validator.ts#L240">validator.ts:240</a></li>
 							</ul>
 						</aside>
 						<h4 class="tsd-returns-title">Returns <a href="../globals.html#validationresult" class="tsd-signature-type">ValidationResult</a></h4>
